--- a/contents/java.html
+++ b/contents/java.html
@@ -10,7 +10,6 @@
             display: none;
         }
 
-        /* Active nav link */
         .nav-pills .nav-link.active {
             background-color: #f1f1f1 !important;
             color: #000000 !important;
@@ -80,6 +79,150 @@
 
         </div>
     </nav>
+
+    <div class="container py-5 bg-dark rounded mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-9">
+                <div class="page-header mt-5">
+                    <h2 class="text-center text-light">Java Programming</h2>
+                </div>
+                <div class="container col-md-12">
+                    <p class="lead m-col text-light">
+                        Java is a powerful, object-oriented programming language widely used for building cross-platform
+                        applications.
+                        Known for its “write once, run anywhere” philosophy, Java enables developers to create programs
+                        that can run on any
+                        device equipped with a Java Virtual Machine (JVM). It's commonly used in enterprise-level
+                        backend development,
+                        Android apps, and large-scale systems. Java emphasizes readability, portability, and
+                        performance,
+                        making it a top choice in academia and the professional world alike. Its vast ecosystem, strong
+                        community support,
+                        and mature frameworks like Spring and Hibernate contribute to its popularity. Whether you're
+                        building web servers,
+                        desktop software, or mobile applications, Java provides robust tools and libraries to make
+                        development efficient
+                        and maintainable.
+                    </p>
+                </div>
+
+                <div class="row mt-5">
+                    <div class="col-md-6">
+                        <div class="accordion" id="continueLearningAccordion">
+                            <div class="accordion-item bg-dark border-light">
+                                <h2 class="accordion-header" id="headingContinueLearning">
+                                    <button class="accordion-button bg-dark text-light" type="button"
+                                        data-bs-toggle="collapse" data-bs-target="#collapseContinueLearning"
+                                        aria-expanded="false" aria-controls="collapseContinueLearning">
+                                        Continue Learning
+                                    </button>
+                                </h2>
+                                <div id="collapseContinueLearning" class="accordion-collapse collapse"
+                                    aria-labelledby="headingContinueLearning"
+                                    data-bs-parent="#continueLearningAccordion">
+                                    <div class="accordion-body">
+                                        <ul class="list-unstyled text-light mt-3">
+                                            <li>
+                                                <a href="https://www.geeksforgeeks.org/object-oriented-programming-in-java/"
+                                                    target="_blank" class="text-light">
+                                                    OOP Concepts in Java
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://www.javatpoint.com/java-collections" target="_blank"
+                                                    class="text-light">
+                                                    Java Collections Framework
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://www.baeldung.com/java-threads" target="_blank"
+                                                    class="text-light">
+                                                    Multithreading in Java
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://www.baeldung.com/spring-boot" target="_blank"
+                                                    class="text-light">
+                                                    Introduction to Spring Boot
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://www.javatpoint.com/java-design-patterns"
+                                                    target="_blank" class="text-light">
+                                                    Java Design Patterns
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="accordion" id="relatedTopicsAccordion">
+                            <div class="accordion-item bg-dark border-light">
+                                <h2 class="accordion-header" id="headingRelatedTopics">
+                                    <button class="accordion-button bg-dark text-light" type="button"
+                                        data-bs-toggle="collapse" data-bs-target="#collapseRelatedTopics"
+                                        aria-expanded="false" aria-controls="collapseRelatedTopics">
+                                        Related Topics
+                                    </button>
+                                </h2>
+                                <div id="collapseRelatedTopics" class="accordion-collapse collapse"
+                                    aria-labelledby="headingRelatedTopics" data-bs-parent="#relatedTopicsAccordion">
+                                    <div class="accordion-body">
+                                        <ul class="list-unstyled text-light mt-3">
+                                            <li>
+                                                <a href="https://www.w3schools.com/html/" target="_blank"
+                                                    class="text-light">
+                                                    HTML Basics
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://www.freecodecamp.org/news/learn-css-in-11-minutes/"
+                                                    target="_blank" class="text-light">
+                                                    Learn CSS Quickly
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide"
+                                                    target="_blank" class="text-light">
+                                                    JavaScript Guide
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://www.codecademy.com/learn/introduction-to-python"
+                                                    target="_blank" class="text-light">
+                                                    Intro to Python
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://roadmap.sh/backend" target="_blank" class="text-light">
+                                                    Backend Developer Roadmap
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer class="container text-center text-white py-4">
+        <ul class="nav justify-content-center">
+            <li class="nav-item"><a class="nav-link text-white" href="../index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#">Technology</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#">Health</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#">Science</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#">Nature</a></li>
+        </ul>
+        <p class="mt-3 mb-0">&copy; 2025 The Blog. All rights reserved.</p>
+    </footer>
 
 </body>
 
