--- a/contents/php.html
+++ b/contents/php.html
@@ -10,7 +10,6 @@
             display: none;
         }
 
-        /* Active nav link */
         .nav-pills .nav-link.active {
             background-color: #f1f1f1 !important;
             color: #000000 !important;
@@ -80,6 +79,152 @@
 
         </div>
     </nav>
+
+    <div class="container py-5 bg-dark rounded mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-9">
+                <div class="page-header mt-5">
+                    <h2 class="text-center text-light">Learn PHP</h2>
+                </div>
+                <div class="container col-md-12">
+                    <p class="lead m-col text-light">
+                        PHP (Hypertext Preprocessor) is a widely-used open-source scripting language designed primarily
+                        for web development. It runs on the server side and is especially suited for creating dynamic
+                        and interactive websites. PHP integrates easily with databases like MySQL and supports various
+                        frameworks such as Laravel and CodeIgniter, which simplify the development process. Its syntax
+                        is simple for beginners but powerful enough for professionals to build robust applications. PHP
+                        powers major content management systems like WordPress, Joomla, and Drupal. Despite evolving
+                        competition, PHP continues to thrive due to its versatility, ease of deployment, and strong
+                        community support. From small blogs to complex enterprise applications, PHP remains a reliable
+                        solution for server-side
+                        PHP (Hypertext Preprocessor) is a widely-used open-source scripting language designed primarily
+                        for web development. It runs on the server side and is especially suited for creating dynamic
+                        and interactive websites. PHP integrates easily with databases like MySQL and supports various
+                        frameworks such as Laravel and CodeIgniter, which simplify the development process. Its syntax
+                        is simple for beginners but powerful enough for professionals to build robust applications. PHP
+                        powers major content management systems like WordPress, Joomla, and Drupal. Despite evolving
+                        competition, PHP continues to thrive due to its versatility, ease of deployment, and strong
+                        community support. From small blogs to complex enterprise applications, PHP remains a reliable
+                        solution for server-side
+                    </p>
+                </div>
+
+                <div class="row mt-5">
+                    <div class="col-md-6">
+                        <div class="accordion" id="continueLearningAccordion">
+                            <div class="accordion-item bg-dark border-light">
+                                <h2 class="accordion-header" id="headingContinueLearning">
+                                    <button class="accordion-button bg-dark text-light" type="button"
+                                        data-bs-toggle="collapse" data-bs-target="#collapseContinueLearning"
+                                        aria-expanded="false" aria-controls="collapseContinueLearning">
+                                        Continue Learning PHP
+                                    </button>
+                                </h2>
+                                <div id="collapseContinueLearning" class="accordion-collapse collapse"
+                                    aria-labelledby="headingContinueLearning"
+                                    data-bs-parent="#continueLearningAccordion">
+                                    <div class="accordion-body">
+                                        <ul class="list-unstyled text-light mt-3">
+                                            <li>
+                                                <a href="https://www.php.net/manual/en/tutorial.php" target="_blank"
+                                                    class="text-light">
+                                                    PHP Manual - Official Documentation
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://www.w3schools.com/php/" target="_blank"
+                                                    class="text-light">
+                                                    Learn PHP - W3Schools
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://www.codecademy.com/learn/learn-php" target="_blank"
+                                                    class="text-light">
+                                                    PHP Course - Codecademy
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://www.freecodecamp.org/news/php-tutorial-for-beginners/"
+                                                    target="_blank" class="text-light">
+                                                    PHP Beginner's Guide - freeCodeCamp
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://www.learn-php.org/" target="_blank" class="text-light">
+                                                    Learn PHP - Learn-PHP.org
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://www.udemy.com/course/php-for-beginners-learn-php-5-and-7/"
+                                                    target="_blank" class="text-light">
+                                                    PHP for Beginners - Udemy
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="accordion" id="relatedTopicsAccordion">
+                            <div class="accordion-item bg-dark border-light">
+                                <h2 class="accordion-header" id="headingRelatedTopics">
+                                    <button class="accordion-button bg-dark text-light" type="button"
+                                        data-bs-toggle="collapse" data-bs-target="#collapseRelatedTopics"
+                                        aria-expanded="false" aria-controls="collapseRelatedTopics">
+                                        Related Topics
+                                    </button>
+                                </h2>
+                                <div id="collapseRelatedTopics" class="accordion-collapse collapse"
+                                    aria-labelledby="headingRelatedTopics" data-bs-parent="#relatedTopicsAccordion">
+                                    <div class="accordion-body">
+                                        <ul class="list-unstyled text-light mt-3">
+                                            <li>
+                                                <a href="https://www.php.net/manual/en/tutorial.php" target="_blank"
+                                                    class="text-light">
+                                                    PHP Official Tutorial
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://www.w3schools.com/php/" target="_blank"
+                                                    class="text-light">
+                                                    PHP Basics - W3Schools
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://www.codewars.com/" target="_blank" class="text-light">
+                                                    PHP Practice - Codewars
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://stackoverflow.com/questions/tagged/php" target="_blank"
+                                                    class="text-light">
+                                                    PHP Q&A - Stack Overflow
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer class="container text-center text-white py-4">
+        <ul class="nav justify-content-center">
+            <li class="nav-item"><a class="nav-link text-white" href="../index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#">Technology</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#">Health</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#">Science</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#">Nature</a></li>
+        </ul>
+        <p class="mt-3 mb-0">&copy; 2025 The Blog. All rights reserved.</p>
+    </footer>
 
 </body>
 
