--- a/contents/sql.html
+++ b/contents/sql.html
@@ -81,6 +81,149 @@
         </div>
     </nav>
 
+    <div class="container py-5 bg-dark rounded mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-9">
+                <div class="page-header mt-5">
+                    <h2 class="text-center text-light">Learn SQL</h2>
+                </div>
+                <div class="container col-md-12">
+                    <p class="lead m-col text-light">
+                        SQL (Structured Query Language) is the standard language for managing and manipulating
+                        relational databases. It's used to retrieve, insert, update, and delete data stored in systems
+                        like MySQL, PostgreSQL, SQL Server, and Oracle. SQL allows developers and analysts to interact
+                        with large volumes of data efficiently, making it essential for backend systems, data
+                        warehouses, and business intelligence applications. With its declarative nature, SQL focuses on
+                        what to do rather than how to do it, simplifying complex data tasks. Mastering SQL is crucial
+                        for anyone working with data, from software engineers to data scientists. It forms the backbone
+                        of nearly every data-driven application and plays a critical role in decision-making processes
+                        across industries.
+                    </p>
+                </div>
+
+                <div class="row mt-5">
+                    <div class="col-md-6">
+                        <div class="accordion" id="continueLearningAccordion">
+                            <div class="accordion-item bg-dark border-light">
+                                <h2 class="accordion-header" id="headingContinueLearning">
+                                    <button class="accordion-button bg-dark text-light" type="button"
+                                        data-bs-toggle="collapse" data-bs-target="#collapseContinueLearning"
+                                        aria-expanded="false" aria-controls="collapseContinueLearning">
+                                        Continue Learning SQL
+                                    </button>
+                                </h2>
+                                <div id="collapseContinueLearning" class="accordion-collapse collapse"
+                                    aria-labelledby="headingContinueLearning"
+                                    data-bs-parent="#continueLearningAccordion">
+                                    <div class="accordion-body">
+                                        <ul class="list-unstyled text-light mt-3">
+                                            <li>
+                                                <a href="https://www.w3schools.com/sql/" target="_blank"
+                                                    class="text-light">
+                                                    SQL Tutorial - W3Schools
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://www.codecademy.com/learn/learn-sql" target="_blank"
+                                                    class="text-light">
+                                                    Learn SQL - Codecademy
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://www.khanacademy.org/computing/computer-programming/sql"
+                                                    target="_blank" class="text-light">
+                                                    SQL Basics - Khan Academy
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://www.sqlcourse.com/" target="_blank" class="text-light">
+                                                    SQL Course - SQLCourse.com
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://www.udemy.com/course/the-complete-sql-bootcamp/"
+                                                    target="_blank" class="text-light">
+                                                    SQL Bootcamp - Udemy
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://www.freecodecamp.org/news/sql-for-beginners/"
+                                                    target="_blank" class="text-light">
+                                                    SQL for Beginners - freeCodeCamp
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="accordion" id="relatedTopicsAccordion">
+                            <div class="accordion-item bg-dark border-light">
+                                <h2 class="accordion-header" id="headingRelatedTopics">
+                                    <button class="accordion-button bg-dark text-light" type="button"
+                                        data-bs-toggle="collapse" data-bs-target="#collapseRelatedTopics"
+                                        aria-expanded="false" aria-controls="collapseRelatedTopics">
+                                        Related Topics
+                                    </button>
+                                </h2>
+                                <div id="collapseRelatedTopics" class="accordion-collapse collapse"
+                                    aria-labelledby="headingRelatedTopics" data-bs-parent="#relatedTopicsAccordion">
+                                    <div class="accordion-body">
+                                        <ul class="list-unstyled text-light mt-3">
+                                            <li>
+                                                <a href="https://www.sqlservercentral.com/" target="_blank"
+                                                    class="text-light">
+                                                    SQL Server Central - SQL Server Community
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://www.geeksforgeeks.org/sql-tutorial/" target="_blank"
+                                                    class="text-light">
+                                                    SQL Tutorial - GeeksforGeeks
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://stackabuse.com/sql-tutorial-for-beginners/"
+                                                    target="_blank" class="text-light">
+                                                    SQL for Beginners - StackAbuse
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://www.learnsql.com/" target="_blank" class="text-light">
+                                                    Learn SQL - LearnSQL.com
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="https://www.tutorialspoint.com/sql/index.htm" target="_blank"
+                                                    class="text-light">
+                                                    SQL Tutorial - TutorialsPoint
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer class="container text-center text-white py-4">
+        <ul class="nav justify-content-center">
+            <li class="nav-item"><a class="nav-link text-white" href="../index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#">Technology</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#">Health</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#">Science</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#">Nature</a></li>
+        </ul>
+        <p class="mt-3 mb-0">&copy; 2025 The Blog. All rights reserved.</p>
+    </footer>
+
 </body>
 
 </html>
