--- a/pages/about.html
+++ b/pages/about.html
@@ -28,20 +28,23 @@
 
     <!-- Bootstrap 5.3.3 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+    <!-- Bootstrap Icons CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Custom Blog Styles -->
-    <link rel="stylesheet" href="../css/StyleForBlog.css" />
+    <link rel="stylesheet" href="css/StyleForBlog.css" />
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+    <!-- Bootstrap 5.3.3 JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body class="bg-dark-subtle"
     style="background-image: url('../public/bg.png'); background-size: cover; background-position: center; background-attachment: fixed; margin: 0; padding: 0;">
 
-    <!-- Navigation -->
     <nav class="navbar navbar-dark bg-black">
         <div class="container-fluid d-flex flex-column align-items-start">
             <div class="d-flex w-100 justify-content-between align-items-center mb-2">
