--- a/pages/post.html
+++ b/pages/post.html
@@ -28,13 +28,17 @@
 
     <!-- Bootstrap 5.3.3 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+    <!-- Bootstrap Icons CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Custom Blog Styles -->
-    <link rel="stylesheet" href="../css/StyleForBlog.css" />
+    <link rel="stylesheet" href="css/StyleForBlog.css" />
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+    <!-- Bootstrap 5.3.3 JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
@@ -86,7 +90,6 @@
     </header>
 
     <div class="container my-5 bg-dark p-4 rounded">
-        <!-- Post Details -->
         <div class="post-header text-white mb-4">
             <h2>Exploring the Power of Programming Languages</h2>
             <div class="d-flex justify-content-between text-light">
@@ -95,7 +98,6 @@
             </div>
         </div>
 
-        <!-- Blog Content -->
         <p class="lead text-light">
             In this post, I would like to share my journey as a developer and how my love for coding has shaped the way
             I view the world. Programming languages like Java, PHP, and HTML/CSS have been my go-to tools for building
